--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "fastapiclinic"
 version = "0.1.0"
 description = ""
 authors = ["Vlad Onishcuk <vlad.onischuk1234@gmail.com>"]
-readme = "README.md"
+package-mode  = false
 
 [tool.poetry.dependencies]
 python = "3.12.7"
@@ -25,6 +25,9 @@ uvicorn = "0.32.0"
 uvloop = "0.21.0"
 watchfiles = "0.24.0"
 websockets = "13.1"
+fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
+asyncpg = "^0.29.0"
+python-decouple = "^3.8"
 
 
 [build-system]
